--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .portada {
   position: relative;
   width: 100%;
-  height: 100vh; /* 👈 ESTO ES LA CLAVE */
+  height: 100vh;
   background-image: url("images/portadasi.png");
   background-size: cover;
   background-position: center;
@@ -37,12 +37,7 @@ body {
 }
 
 
-.portada img {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
-}
+
 
 .portada-titulo {
     position: absolute;
